tests/baselines/reference/errorLocationForInterfaceExtension.errors.txt
tests/cases/compiler/errorLocationForInterfaceExtension.ts(3,21): error TS18042: An interface cannot extend a primitive type like 'string'. An interface can only extend named object types.


==== tests/cases/compiler/errorLocationForInterfaceExtension.ts (1 errors) ====
    var n = '';
    
    interface x extends string { }
                        ~~~~~~
!!! error TS18042: An interface cannot extend a primitive type like 'string'. An interface can only extend named object types.
    